--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@reduxjs/toolkit": "^2.8.2",
     "@shikijs/rehype": "^3.4.2",
     "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
     "@tailwindcss/vite": "^4.1.6",
@@ -32,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
@@ -39,11 +39,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
-    "redux": "^5.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-breaks": "^4.0.0",
@@ -51,7 +49,9 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "zod": "^3.25.46",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
