--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
+    "html2pdf.js": "^0.10.3",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
@@ -46,6 +49,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "rehype-raw": "^7.0.0",
