--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
+    "motion": "^12.23.3",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
