--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
-    "html2pdf.js": "^0.10.3",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.510.0",
@@ -55,6 +54,7 @@
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-to-print": "^3.1.1",
     "recharts": "^2.15.4",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
