--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
+    "vaul": "^1.1.2",
     "zod": "^3.25.46",
     "zustand": "^5.0.5"
   },
