--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "ckeditor5": "^46.0.1",
+    "ckeditor5-premium-features": "^46.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -55,6 +56,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
     "react-syntax-highlighter": "^15.6.1",
