--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
+    "html2canvas-pro": "^1.5.11",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.510.0",
     "motion": "^12.23.3",
     "next-themes": "^0.4.6",
