add: add i18n  profile

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.19.1",
     "html2canvas-pro": "^1.5.11",
+    "i18next": "^25.4.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
@@ -58,6 +59,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.7.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
