--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.19.1",
+    "html-docx-js-typescript": "^0.1.5",
     "html2canvas-pro": "^1.5.11",
     "i18next": "^25.4.0",
     "input-otp": "^1.4.2",
